--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
 
 <body>
 	<canvas id="game-stage"></canvas>
+	<canvas id="ui-stage"></canvas>
 	<div id="count-ratio">
 		<input type="range" min="1" max="100" step="1" value="100" data-rangeslider>
 	</div>
