删除tsconfig中的指定文件编译

--- a/views/index.html
+++ b/views/index.html
@@ -4,20 +4,22 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SolarWar</title>
-	<link rel="stylesheet" href="/static/style/main.css">
+	<link rel="stylesheet" href="/public/style/main.css">
 </head>
 
 <body>
-	<canvas id="game-stage"></canvas>
-	<canvas id="ui-stage"></canvas>
-	<div id="count-ratio">
+<canvas id="game-stage"></canvas>
+<canvas id="ui-stage"></canvas>
+<div id="count-ratio">
+	<label>
 		<input type="range" min="1" max="100" step="1" value="100" data-rangeslider>
-	</div>
+	</label>
+</div>
 
-	<script src="/static/scripts/lib/jquery-3.1.0.min.js"></script>
-	<script src="/static/scripts/lib/jquery.mousewheel.min.js"></script>
-	<script src="/static/scripts/lib/rangeslider.min.js"></script>
-	<script src="/static/scripts/bundle.js"></script>
+<script src="/public/scripts/lib/jquery-3.1.0.min.js"></script>
+<script src="/public/scripts/lib/jquery.mousewheel.min.js"></script>
+<script src="/public/scripts/lib/rangeslider.min.js"></script>
+<script src="/public/scripts/bundle.js"></script>
 </body>
 
 </html>
