--- a/public/style/main.css
+++ b/public/style/main.css
@@ -2,7 +2,7 @@ html,
 body {
 	margin: 0;
 	padding: 0;
-	font-family: 'Microsoft YaHei';
+	font-family: 'Microsoft YaHei', serif;
 }
 
 #game-stage {
@@ -32,7 +32,7 @@ body {
 	display: block;
 	height: 20px;
 	width: 100%;
-	box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
 	border-radius: 10px;
 }
 
@@ -52,7 +52,6 @@ body {
 }
 
 .rangeslider__handle {
-	background: white;
 	border: 1px solid #ccc;
 	cursor: pointer;
 	display: inline-block;
@@ -62,7 +61,7 @@ body {
 	text-align: center;
 	position: absolute;
 	top: -5px;
-	background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.1));
+	background: white linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.1));
 	box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
 	border-radius: 10px;
 }
