加入toastr通知插件

--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SolarWar</title>
+	<link rel="stylesheet" href="/public/style/toastr.min.css">
 	<link rel="stylesheet" href="/public/style/main.css">
 </head>
 
@@ -19,6 +20,7 @@
 <script src="/public/scripts/lib/jquery-3.1.0.min.js"></script>
 <script src="/public/scripts/lib/jquery.mousewheel.min.js"></script>
 <script src="/public/scripts/lib/rangeslider.min.js"></script>
+<script src="/public/scripts/lib/toastr.min.js"></script>
 <script src="/public/scripts/bundle.js"></script>
 </body>
 
