--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,5 +1,4 @@
-html,
-body {
+html, body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Microsoft YaHei', serif;
@@ -11,6 +10,7 @@ body {
 	left: 0;
 	z-index: 1;
 }
+
 #ui-stage {
 	position: absolute;
 	top: 0;
@@ -18,16 +18,32 @@ body {
 	z-index: 2;
 }
 
-#count-ratio{
+#count-ratio {
 	position: absolute;
-	bottom:20px;
-	left:35%;
-	width:30%;
+	bottom: 20px;
+	left: 35%;
+	width: 30%;
 	z-index: 3;
 }
 
-.rangeslider,
-.rangeslider__fill {
+.modal.fade .modal-dialog {
+	-webkit-transition: none;
+	-o-transition: none;
+	transition: none;
+	-webkit-transform: none;
+	-ms-transform: none;
+	-o-transform: none;
+	transform: none;
+}
+
+.modal.in .modal-dialog {
+	-webkit-transform: none;
+	-ms-transform: none;
+	-o-transform: none;
+	transform: none;
+}
+
+.rangeslider, .rangeslider__fill {
 	background: #e6e6e6;
 	display: block;
 	height: 20px;
@@ -41,7 +57,7 @@ body {
 }
 
 .rangeslider--disabled {
-	filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
+	filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=40);
 	opacity: 0.4;
 }
 
@@ -65,6 +81,7 @@ body {
 	box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
 	border-radius: 10px;
 }
+
 .rangeslider__handle:active {
 	background-size: 100%;
 	background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.12));
