--- a/views/index.html
+++ b/views/index.html
@@ -23,12 +23,14 @@
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-body">
-					<div class="input-group">
-						<input class="form-control" type="text" value="Default Player">
-						<span class="input-group-btn">
-							<button class="btn btn-default ok">确定</button>
+					<form class="form-gameon">
+						<div class="input-group">
+							<input class="form-control" type="text" value="Default Player">
+							<span class="input-group-btn">
+							<button type="submit" class="btn btn-default">确定</button>
 						</span>
-					</div>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
@@ -39,12 +41,14 @@
 			<div class="modal-content">
 				<div class="modal-body">
 					<p class="history-max-ships-count"></p>
-					<div class="input-group">
-						<input class="form-control" type="text" value="Default Player">
-						<span class="input-group-btn">
-							<button class="btn btn-default">确定</button>
+					<form class="form-gameover">
+						<div class="input-group">
+							<input class="form-control" type="text" value="Default Player">
+							<span class="input-group-btn">
+							<button type="submit" class="btn btn-default">确定</button>
 						</span>
-					</div>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
