--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-	<canvas id="game-stage"></canvas>
-	<canvas id="ui-stage"></canvas>
+	<canvas id="game-stage" data-ip="<%=ip%>" data-port="<%=port%>"></canvas>
+	<canvas id="ui-stage"><%=ip%>></canvas>
 
 	<div id="count-ratio">
 		<input type="range" min="1" max="100" step="1" value="100" data-rangeslider>
