修复currShipsCount为null错误

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,8 @@
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-body">
-					<p class="history-max-ships-count"></p>
+					<h3 class="text-center">游戏结束</h3>
+					<p>你的最高分是 <span class="history-max-ships-count"></span></p>
 					<form class="form-gameover">
 						<div class="input-group">
 							<input class="form-control" type="text" value="Default Player">
