--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SolarWar</title>
+	<link rel="stylesheet" href="/public/style/rangeslider.css">
+	<!--<link href="//cdn.bootcss.com/rangeslider.js/2.2.1/rangeslider.min.css" rel="stylesheet">-->
 	<link rel="stylesheet" href="/public/style/toastr.min.css">
 	<!--<link href="//cdn.bootcss.com/toastr.js/latest/css/toastr.min.css" rel="stylesheet">-->
 	<link rel="stylesheet" href="/public/style/bootstrap.min.css">
@@ -13,22 +15,22 @@
 
 <body>
 	<canvas id="game-stage" data-ip="<%=ip%>" data-port="<%=port%>"></canvas>
-	<canvas id="ui-stage"><%=ip%>></canvas>
+	<canvas id="ui-stage"></canvas>
 
 	<div id="count-ratio">
-		<input type="range" min="1" max="100" step="1" value="100" data-rangeslider>
+		<input type="range" min="1" max="100" step="1" data-rangeslider v-model="range">
 	</div>
 
 	<div class="modal fade" id="modal-gameon">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-body">
-					<form class="form-gameon">
+					<form v-on:submit.prevent="onSubmit" class="form-gameon">
 						<div class="input-group">
-							<input class="form-control" type="text" value="Default Player">
+							<input v-model="name" class="form-control" type="text">
 							<span class="input-group-btn">
-							<button type="submit" class="btn btn-default">确定</button>
-						</span>
+								<button type="submit" class="btn btn-default">确定</button>
+							</span>
 						</div>
 					</form>
 				</div>
@@ -41,13 +43,13 @@
 			<div class="modal-content">
 				<div class="modal-body">
 					<h3 class="text-center">游戏结束</h3>
-					<p>你的最高分是 <span class="history-max-ships-count"></span></p>
-					<form class="form-gameover">
+					<p>你的最高分是 {{historyMaxShipsCount}}</p>
+					<form v-on:submit.prevent="onSubmit" class="form-gameover">
 						<div class="input-group">
-							<input class="form-control" type="text" value="Default Player">
+							<input v-model="name" class="form-control" type="text">
 							<span class="input-group-btn">
-							<button type="submit" class="btn btn-default">确定</button>
-						</span>
+								<button type="submit" class="btn btn-default">确定</button>
+							</span>
 						</div>
 					</form>
 				</div>
@@ -55,6 +57,8 @@
 		</div>
 	</div>
 
+	<script src="/public/scripts/lib/vue.js"></script>
+	<!--<script src="//cdn.bootcss.com/vue/2.0.1/vue.min.js"></script>-->
 	<script src="/public/scripts/lib/jquery-3.1.0.min.js"></script>
 	<!--<script src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>-->
 	<script src="/public/scripts/lib/bootstrap.min.js"></script>
@@ -62,6 +66,7 @@
 	<script src="/public/scripts/lib/jquery.mousewheel.min.js"></script>
 	<!--<script src="//cdn.bootcss.com/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>-->
 	<script src="/public/scripts/lib/rangeslider.min.js"></script>
+	<!--<script src="//cdn.bootcss.com/rangeslider.js/2.2.1/rangeslider.min.js"></script>-->
 	<script src="/public/scripts/lib/toastr.min.js"></script>
 	<!--<script src="//cdn.bootcss.com/toastr.js/latest/js/toastr.min.js"></script>-->
 	<script src="/public/scripts/bundle.js"></script>
