--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,7 +1,14 @@
 html, body {
-	margin: 0;
-	padding: 0;
 	font-family: 'Microsoft YaHei', serif;
+}
+
+.stage-container {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 #game-stage {
