--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,10 @@
 </head>
 
 <body>
-	<canvas id="game-stage"></canvas>
-	<canvas id="ui-stage"></canvas>
+	<div class="stage-container">
+		<canvas id="game-stage"></canvas>
+		<canvas id="ui-stage"></canvas>
+	</div>
 
 	<div id="count-ratio">
 		<input type="range" min="1" max="100" step="1" data-rangeslider v-model="range">
