--- a/public/style/main.css
+++ b/public/style/main.css
@@ -9,6 +9,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+	background: linear-gradient(to bottom, #08060C, #111123);
 }
 
 #game-stage {
@@ -23,14 +24,6 @@ html, body {
 	top: 0;
 	left: 0;
 	z-index: 2;
-}
-
-#count-ratio {
-	position: absolute;
-	bottom: 20px;
-	left: 35%;
-	width: 30%;
-	z-index: 3;
 }
 
 .modal .title {
@@ -55,15 +48,84 @@ html, body {
 	transform: none;
 }
 
-.rangeslider--horizontal .rangeslider__handle {
-	width: 50px;
-	height: 30px;
-	line-height: 30px;
-	text-align: center;
-	top: -5px;
-	border-radius: 10px;
+.ratio {
+	width: 150px;
+	height: 150px;
+	border-radius: 50%;
+	position: absolute;
+	bottom: 10px;
+	left: 10px;
+	box-shadow: 0 0.5em 2em rgba(0, 0, 0, 0.3), inset 0 0.2em 0.4em -0.2em rgba(255, 255, 255, 0.2), 0 0 0.2em rgba(0, 0, 0, 0.4);
+	background: -webkit-linear-gradient(top, #3F3F4C, #191720);
+	background: linear-gradient(to bottom, #3F3F4C, #191720);
+	overflow: hidden;
+	z-index: 3;
+	-moz-user-select: none;
+	-o-user-select: none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
-.rangeslider__handle:after {
-	display: none;
+.ratio > * {
+	position: absolute;
+	bottom: 0;
+	top: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+}
+
+.ratio .text {
+	position: absolute;
+	top: -27px;
+	width: 100%;
+	font-size: 18px;
+	text-align: center;
+	color: #fff;
+	text-shadow: 1px 1px 2px #000;
+}
+
+.wheel {
+	width: 84px;
+	height: 84px;
+	border-radius: 50%;
+	box-shadow: inset 0 0.1em 0.2em rgba(255, 255, 255, 0.2), 0 1em 2em 0.4em rgba(0, 0, 0, 0.5), 0 -1em 2em 0.1em rgba(255, 255, 255, 0.1);
+	background: linear-gradient(to bottom, #525161, #322E3D);
+}
+
+.wheel .indicator {
+	width: 100%;
+	height: 100%;
+	transform: rotate(30deg);
+}
+
+.wheel .indicator:after {
+	content: '';
+	display: block;
+	position: absolute;
+	background: #3B3A46;
+	border-radius: 50%;
+	width: 12px;
+	height: 12px;
+	top: 7px;
+	left: 0;
+	right: 0;
+	margin: auto;
+	box-shadow: 0 1px 1px -1px rgba(255, 255, 255, 0.4), inset 0 1px 1px rgba(0, 0, 0, 0.4);
+}
+
+.outline {
+	width: 130px;
+	height: 130px;
+	transform: rotate(-120deg) scaleY(-1);
+}
+
+.path-bg {
+	stroke-dasharray: 471 565;
+}
+
+.path {
+	stroke-dasharray: 471 565;
 }
