--- a/views/index.html
+++ b/views/index.html
@@ -17,11 +17,12 @@
 
 <body>
 	<div class="stage-container">
-		<canvas id="game-stage"></canvas>
-		<canvas id="ui-stage"></canvas>
+		<canvas class="stage" id="game-stage"></canvas>
+		<canvas class="stage" id="game-moving-ships-stage"></canvas>
+		<canvas class="stage" id="ui-stage"></canvas>
 	</div>
 
-	<div id="ratio" class="ratio">
+	<div id="range" class="range">
 		<svg class="outline" viewBox="0 0 200 200" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
 			<defs>
 				<linearGradient x1="16.291%" y1="13.917%" x2="88.893%" y2="80.425%" id="a">
