--- a/public/style/main.css
+++ b/public/style/main.css
@@ -52,7 +52,7 @@ html, body {
 	transform: none;
 }
 
-.range {
+.ratio {
 	width: 150px;
 	height: 150px;
 	border-radius: 50%;
@@ -72,7 +72,7 @@ html, body {
 	user-select: none;
 }
 
-.range > * {
+.ratio > * {
 	position: absolute;
 	bottom: 0;
 	top: 0;
@@ -81,7 +81,7 @@ html, body {
 	margin: auto;
 }
 
-.range .text {
+.ratio .text {
 	position: absolute;
 	top: -27px;
 	width: 100%;
@@ -91,7 +91,7 @@ html, body {
 	text-shadow: 1px 1px 2px #000;
 }
 
-.wheel {
+.ratio .wheel {
 	width: 84px;
 	height: 84px;
 	border-radius: 50%;
@@ -99,13 +99,13 @@ html, body {
 	background: linear-gradient(to bottom, #525161, #322E3D);
 }
 
-.wheel .indicator {
+.ratio .wheel .indicator {
 	width: 100%;
 	height: 100%;
 	transform: rotate(30deg);
 }
 
-.wheel .indicator:after {
+.ratio .wheel .indicator:after {
 	content: '';
 	display: block;
 	position: absolute;
@@ -120,16 +120,16 @@ html, body {
 	box-shadow: 0 1px 1px -1px rgba(255, 255, 255, 0.4), inset 0 1px 1px rgba(0, 0, 0, 0.4);
 }
 
-.outline {
+.ratio .outline {
 	width: 130px;
 	height: 130px;
 	transform: rotate(-120deg) scaleY(-1);
 }
 
-.path-bg {
+.ratio .path-bg {
 	stroke-dasharray: 471 565;
 }
 
-.path {
+.ratio .path {
 	stroke-dasharray: 471 565;
 }
