--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
 		<canvas class="stage" id="ui-stage"></canvas>
 	</div>
 
-	<div id="range" class="range">
+	<div id="ratio" class="ratio">
 		<svg class="outline" viewBox="0 0 200 200" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
 			<defs>
 				<linearGradient x1="16.291%" y1="13.917%" x2="88.893%" y2="80.425%" id="a">
@@ -36,7 +36,7 @@
 			</g>
 		</svg>
 		<div class="wheel">
-			<div class="text">{{range}}%</div>
+			<div class="text">{{ratio}}%</div>
 			<div id="indicator" class="indicator"></div>
 		</div>
 	</div>
