增加当前飞船数量显示, 修复由于占领太慢前后端不同步问题

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -42,6 +42,14 @@ html, body {
 	background-repeat: repeat;
 }
 
+.player {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: #fff;
+	z-index: 4;
+}
+
 .modal .title {
 	margin-top: 10px;
 	margin-bottom: 10px;
