--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,10 @@
 		<canvas class="stage" id="ui-stage"></canvas>
 	</div>
 
+	<div id="player" class="player">
+		{{currShipsCount}} / {{maxShipsCount}}
+	</div>
+
 	<div id="ratio" class="ratio">
 		<svg class="outline" viewBox="0 0 200 200" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
 			<defs>
