--- a/public/style/main.css
+++ b/public/style/main.css
@@ -46,8 +46,21 @@ html, body {
 	position: absolute;
 	top: 0;
 	left: 0;
+	padding: 5px;
 	background: #fff;
 	z-index: 4;
+}
+
+.ranklist {
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 2px 5px;
+	z-index: 4;
+}
+
+.ranklist p:last-child {
+	margin-bottom: 0;
 }
 
 .modal .title {
