--- a/views/index.html
+++ b/views/index.html
@@ -69,7 +69,9 @@
 						<div class="input-group">
 							<input v-model="name" class="form-control" type="text">
 							<span class="input-group-btn">
-								<button type="submit" class="btn btn-default">确定</button>
+								<button type="submit" class="btn btn-default">开始新游戏</button>
+								
+								<button type="button" class="btn btn-success" v-show="activeWebSocket && activeWebSocket.canResumeGame" v-on:click="resumeGame">继续游戏</button>
 							</span>
 						</div>
 					</form>
@@ -105,7 +107,7 @@
 						<div class="input-group">
 							<input v-model="name" class="form-control" type="text">
 							<span class="input-group-btn">
-								<button type="submit" class="btn btn-default">确定</button>
+								<button type="submit" class="btn btn-default">重新开始</button>
 							</span>
 						</div>
 					</form>
