--- a/views/index.html
+++ b/views/index.html
@@ -24,32 +24,35 @@
 		<canvas class="stage" id="ui-stage"></canvas>
 	</div>
 
-	<div id="player" class="player">
-		{{currShipsCount}} / {{maxShipsCount}}
-	</div>
+	<div id="ui">
+		<div class="player">
+			{{currShipsCount}} / {{maxShipsCount}}
+			<span v-show="gameTime >= 0"></span> {{gameTime}}
+		</div>
 
-	<div id="ranklist" class="ranklist">
-		<p v-for="(player, index) in ranklist" v-bind:style="{color:player.color}">
-			{{index+1}} {{player.name}} {{player.maxShipsCount}}
-		</p>
-	</div>
+		<div class="ranklist">
+			<p v-for="(player, index) in ranklist" v-bind:style="{color:player.color}">
+				{{index+1}} {{player.name}} {{player.maxShipsCount}}
+			</p>
+		</div>
 
-	<div id="ratio" class="ratio">
-		<svg class="outline" viewBox="0 0 200 200" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
-			<defs>
-				<linearGradient x1="16.291%" y1="13.917%" x2="88.893%" y2="80.425%" id="a">
-					<stop stop-color="#B0DBDD" offset="0%" />
-					<stop stop-color="#0AA3C9" offset="100%" />
-				</linearGradient>
-			</defs>
-			<g fill="none" fill-rule="evenodd">
-				<circle class="path-bg" cx="100" cy="100" r="90" stroke="rgba(0,0,0,.4)" stroke-linecap="round" stroke-width="10" />
-				<circle id="path" class='path' cx="100" cy="100" r="90" stroke="url(#a)" stroke-linecap="round" stroke-width="6" />
-			</g>
-		</svg>
-		<div class="wheel">
-			<div class="text">{{ratio}}%</div>
-			<div id="indicator" class="indicator"></div>
+		<div class="ratio">
+			<svg class="outline" viewBox="0 0 200 200" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
+				<defs>
+					<linearGradient x1="16.291%" y1="13.917%" x2="88.893%" y2="80.425%" id="a">
+						<stop stop-color="#B0DBDD" offset="0%" />
+						<stop stop-color="#0AA3C9" offset="100%" />
+					</linearGradient>
+				</defs>
+				<g fill="none" fill-rule="evenodd">
+					<circle class="path-bg" cx="100" cy="100" r="90" stroke="rgba(0,0,0,.4)" stroke-linecap="round" stroke-width="10" />
+					<circle id="path" class='path' cx="100" cy="100" r="90" stroke="url(#a)" stroke-linecap="round" stroke-width="6" />
+				</g>
+			</svg>
+			<div class="wheel">
+				<div class="text">{{ratio}}%</div>
+				<div id="indicator" class="indicator"></div>
+			</div>
 		</div>
 	</div>
 
@@ -58,7 +61,7 @@
 			<div class="modal-content">
 				<div class="modal-body">
 					<h3 class="text-center title">SolarWar</h3>
-					<form v-on:submit.prevent="onSubmit">
+					<form v-on:submit.prevent="startGame()">
 						<div class="list-group">
 							<a v-for="(webSocket, index) in webSockets" v-bind:class="{active: webSocket == activeWebSocket}" v-on:click="activeWebSocket = webSocket"
 								href="javascript:;" class="list-group-item">
@@ -71,7 +74,7 @@
 							<span class="input-group-btn">
 								<button type="submit" class="btn btn-default">开始新游戏</button>
 								
-								<button type="button" class="btn btn-success" v-show="activeWebSocket && activeWebSocket.canResumeGame" v-on:click="resumeGame">继续游戏</button>
+								<button type="button" class="btn btn-success" v-show="activeWebSocket && activeWebSocket.canResumeGame" v-on:click="resumeGame()">继续游戏</button>
 							</span>
 						</div>
 					</form>
@@ -96,11 +99,11 @@
 				<div class="modal-body">
 					<h3 class="text-center title">游戏结束</h3>
 					<p>你的最高分是 {{historyMaxShipsCount}}</p>
-					<form v-on:submit.prevent="onSubmit">
+					<form v-on:submit.prevent="startGameFromGameOver">
 						<div class="list-group">
-							<a v-for="webSocket in webSockets" v-bind:class="{active: webSocket == activeWebSocket}" v-on:click="activeWebSocket = webSocket"
+							<a v-for="(webSocket, index) in webSockets" v-bind:class="{active: webSocket == activeWebSocket}" v-on:click="activeWebSocket = webSocket"
 								href="javascript:;" class="list-group-item">
-								{{webSocket.ip}}:{{webSocket.port}}
+								{{index+1}}. {{webSocket.ip}}:{{webSocket.port}}
 								<span v-show="webSocket == activeWebSocket" class="pull-right"><i class="fa fa-check-circle"></i></span>
 							</a>
 						</div>
