--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,22 +61,48 @@
 			<div class="modal-content">
 				<div class="modal-body">
 					<h3 class="text-center title">SolarWar</h3>
+					<p class="text-center title">
+						<% if (user) { %>
+							<%- user.email %>
+						<% } %>
+					</p>
 					<form v-on:submit.prevent="startGame()">
 						<div class="list-group">
-							<a v-for="(webSocket, index) in webSockets" v-bind:class="{active: webSocket == activeWebSocket}" v-on:click="activeWebSocket = webSocket"
+							<a v-for="(webSocket, index) in common.webSockets" v-bind:class="{active: webSocket == common.activeWebSocket}" v-on:click="common.activeWebSocket = webSocket"
 								href="javascript:;" class="list-group-item">
 								{{index+1}}. {{webSocket.ip}}:{{webSocket.port}}
-								<span v-show="webSocket == activeWebSocket" class="pull-right"><i class="fa fa-check-circle"></i></span>
+								<span v-show="webSocket == common.activeWebSocket" class="pull-right"><i class="fa fa-check-circle"></i></span>
 							</a>
 						</div>
-						<div class="input-group">
-							<input v-model="name" class="form-control" type="text">
-							<span class="input-group-btn">
+						<div class="form-group">
+							<div class="input-group">
+								<input v-model="common.name" class="form-control" type="text">
+								<span class="input-group-btn">
 								<button type="submit" class="btn btn-default">开始新游戏</button>
-								
-								<button type="button" class="btn btn-success" v-show="activeWebSocket && activeWebSocket.canResumeGame" v-on:click="resumeGame()">继续游戏</button>
+								<button type="button" class="btn btn-success" 
+										v-on:click="showAccount = !showAccount">登录 / 注册</button>
+								<button type="button" class="btn btn-success" 
+										v-show="common.activeWebSocket && common.activeWebSocket.canResumeGame" v-on:click="resumeGame()">继续游戏</button>
 							</span>
+							</div>
 						</div>
+						<template v-if="showAccount">
+							<div class="form-group">
+								<input type="email" class="form-control" placeholder="邮箱" v-model="email">
+							</div>
+							<div class="form-group">
+								<input type="password" class="form-control" placeholder="密码" v-model="password">
+							</div>
+							<div class="row">
+								<div class="col-md-6">
+									<button type="button" class="btn btn-primary btn-block" v-on:click="signin()">登录</button>
+								</div>
+								<div class="col-md-6">
+									<button type="button" class="btn btn-default btn-block" v-on:click="signup()">注册</button>
+								</div>
+							</div>
+						</template>
+						
 					</form>
 				</div>
 			</div>
@@ -98,17 +124,22 @@
 			<div class="modal-content">
 				<div class="modal-body">
 					<h3 class="text-center title">游戏结束</h3>
+					<p class="text-center title">
+						<% if (user) { %>
+							<%- user.email %>
+						<% } %>
+					</p>
 					<p>你的最高分是 {{historyMaxShipsCount}}</p>
 					<form v-on:submit.prevent="startGameFromGameOver">
 						<div class="list-group">
-							<a v-for="(webSocket, index) in webSockets" v-bind:class="{active: webSocket == activeWebSocket}" v-on:click="activeWebSocket = webSocket"
+							<a v-for="(webSocket, index) in common.webSockets" v-bind:class="{active: webSocket == common.activeWebSocket}" v-on:click="common.activeWebSocket = webSocket"
 								href="javascript:;" class="list-group-item">
 								{{index+1}}. {{webSocket.ip}}:{{webSocket.port}}
-								<span v-show="webSocket == activeWebSocket" class="pull-right"><i class="fa fa-check-circle"></i></span>
+								<span v-show="webSocket == common.activeWebSocket" class="pull-right"><i class="fa fa-check-circle"></i></span>
 							</a>
 						</div>
 						<div class="input-group">
-							<input v-model="name" class="form-control" type="text">
+							<input v-model="common.name" class="form-control" type="text">
 							<span class="input-group-btn">
 								<button type="submit" class="btn btn-default">重新开始</button>
 							</span>
