--- a/public/style/main.css
+++ b/public/style/main.css
@@ -42,7 +42,7 @@ html, body {
 	left: 0;
 	padding: 5px;
 	background: #fff;
-	z-index: 4;
+	z-index: 5;
 }
 
 .ranklist {
@@ -50,7 +50,7 @@ html, body {
 	top: 0;
 	right: 0;
 	padding: 2px 5px;
-	z-index: 4;
+	z-index: 5;
 }
 
 .ranklist p:last-child {
@@ -83,91 +83,37 @@ html, body {
 	transform: none;
 }
 
-.ratio {
-	width: 150px;
-	height: 150px;
-	border-radius: 50%;
-	position: absolute;
-	bottom: 10px;
-	left: 10px;
-	box-shadow: 0 0.5em 2em rgba(0, 0, 0, 0.3), inset 0 0.2em 0.4em -0.2em rgba(255, 255, 255, 0.2), 0 0 0.2em rgba(0, 0, 0, 0.4);
-	background: -webkit-linear-gradient(top, #3F3F4C, #191720);
-	background: linear-gradient(to bottom, #3F3F4C, #191720);
-	overflow: hidden;
-	z-index: 3;
-	-moz-user-select: none;
-	-o-user-select: none;
-	-khtml-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
 .props {
 	position: absolute;
 	top: 50px;
 	left: 0;
-	z-index: 3;
+	z-index: 5;
 }
 
-.ratio > * {
+#ratio {
 	position: absolute;
-	bottom: 0;
-	top: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
+	bottom: 20px;
+	left: 35%;
+	width: 30%;
+	z-index: 999;
 }
 
-.ratio .text {
-	position: absolute;
-	top: -27px;
-	width: 100%;
-	font-size: 18px;
+.rangeslider__fill {
+	/*background: #00BFFF;*/
+}
+
+.rangeslider__handle {
+	width: 50px;
+	height: 30px;
+	line-height: 30px;
 	text-align: center;
-	color: #fff;
-	text-shadow: 1px 1px 2px #000;
+	border-radius: 10px;
 }
 
-.ratio .wheel {
-	width: 84px;
-	height: 84px;
-	border-radius: 50%;
-	box-shadow: inset 0 0.1em 0.2em rgba(255, 255, 255, 0.2), 0 1em 2em 0.4em rgba(0, 0, 0, 0.5), 0 -1em 2em 0.1em rgba(255, 255, 255, 0.1);
-	background: linear-gradient(to bottom, #525161, #322E3D);
+.rangeslider--horizontal .rangeslider__handle {
+	top: -5px;
 }
 
-.ratio .wheel .indicator {
-	width: 100%;
-	height: 100%;
-	transform: rotate(30deg);
-}
-
-.ratio .wheel .indicator:after {
-	content: '';
-	display: block;
-	position: absolute;
-	background: #3B3A46;
-	border-radius: 50%;
-	width: 12px;
-	height: 12px;
-	top: 7px;
-	left: 0;
-	right: 0;
-	margin: auto;
-	box-shadow: 0 1px 1px -1px rgba(255, 255, 255, 0.4), inset 0 1px 1px rgba(0, 0, 0, 0.4);
-}
-
-.ratio .outline {
-	width: 130px;
-	height: 130px;
-	transform: rotate(-120deg) scaleY(-1);
-}
-
-.ratio .path-bg {
-	stroke-dasharray: 471 565;
-}
-
-.ratio .path {
-	stroke-dasharray: 471 565;
+.rangeslider__handle:after {
+	background-image: none;
 }
