--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,12 +6,12 @@
 	<title>SolarWar</title>
 	
 	<% if (useCDN) { %>
-		// <link href="//cdn.bootcss.com/rangeslider.js/2.2.1/rangeslider.min.css" rel="stylesheet" />
+		<link href="//cdn.bootcss.com/rangeslider.js/2.2.1/rangeslider.min.css" rel="stylesheet" />
 		<link href="//cdn.bootcss.com/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
 		<link href="//cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" />
 		<link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 	<% } else { %>
-		// <link rel="stylesheet" href="/public/style/rangeslider.css" />
+		<link rel="stylesheet" href="/public/style/rangeslider.css" />
 		<link rel="stylesheet" href="/public/style/toastr.min.css" />
 		<link rel="stylesheet" href="/public/style/font-awesome.min.css" />
 		<link rel="stylesheet" href="/public/style/bootstrap.min.css" />
@@ -40,23 +40,8 @@
 			</p>
 		</div>
 
-		<div class="ratio">
-			<svg class="outline" viewBox="0 0 200 200" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
-				<defs>
-					<linearGradient x1="16.291%" y1="13.917%" x2="88.893%" y2="80.425%" id="a">
-						<stop stop-color="#B0DBDD" offset="0%" />
-						<stop stop-color="#0AA3C9" offset="100%" />
-					</linearGradient>
-				</defs>
-				<g fill="none" fill-rule="evenodd">
-					<circle class="path-bg" cx="100" cy="100" r="90" stroke="rgba(0,0,0,.4)" stroke-linecap="round" stroke-width="10" />
-					<circle id="path" class='path' cx="100" cy="100" r="90" stroke="url(#a)" stroke-linecap="round" stroke-width="6" />
-				</g>
-			</svg>
-			<div class="wheel">
-				<div class="text">{{ratio}}%</div>
-				<div id="indicator" class="indicator"></div>
-			</div>
+		<div id="ratio">
+			<input type="range" min="1" max="100" step="1" value="100" data-rangeslider>
 		</div>
 
 		<div class="props">
@@ -167,14 +152,14 @@
 		<script src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
 		<script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="//cdn.bootcss.com/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
-		// <script src="//cdn.bootcss.com/rangeslider.js/2.2.1/rangeslider.min.js"></script>
+		<script src="//cdn.bootcss.com/rangeslider.js/2.2.1/rangeslider.min.js"></script>
 		<script src="//cdn.bootcss.com/toastr.js/latest/js/toastr.min.js"></script>
 	<% } else { %>
 		<script src="/public/scripts/lib/vue.js"></script>
 		<script src="/public/scripts/lib/jquery-3.1.0.min.js"></script>
 		<script src="/public/scripts/lib/bootstrap.min.js"></script>
 		<script src="/public/scripts/lib/jquery.mousewheel.min.js"></script>
-		// <script src="/public/scripts/lib/rangeslider.min.js"></script>
+		<script src="/public/scripts/lib/rangeslider.min.js"></script>
 		<script src="/public/scripts/lib/toastr.min.js"></script>
 	<% } %>
 	<script src="/public/scripts/bundle.js"></script>
