--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
 
 		<div class="ranklist">
 			<p v-for="(player, index) in ranklist" v-bind:style="{color:player.color}">
-				{{index+1}} {{player.name}} {{player.maxShipsCount}}
+				{{index+1}} {{player.name}} {{player.currShipsCount}}
 			</p>
 		</div>
 
