优化移动画布时的性能

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,9 +22,12 @@
 
 <body>
 	<div class="stage-container">
-		<canvas class="stage" id="bg-stage"></canvas>
-		<canvas class="stage" id="game-moving-ships-stage"></canvas>
-		<canvas class="stage" id="game-stage"></canvas>
+		<div class="stage" id="moving-stage-container">
+			<canvas class="stage" id="bg-stage"></canvas>
+			<canvas class="stage" id="game-moving-ships-stage"></canvas>
+			<canvas class="stage" id="game-stage"></canvas>
+		</div>
+		
 		<canvas class="stage" id="ui-stage"></canvas>
 	</div>
 
