优化缩放性能, 添加正在争夺中的星球提示

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
 
 <body>
 	<div class="stage-container">
-		<div class="stage" id="moving-stage-container">
+		<div class="stage" id="trans-stage-container">
 			<canvas class="stage" id="bg-stage"></canvas>
 			<canvas class="stage" id="game-moving-ships-stage"></canvas>
 			<canvas class="stage" id="game-stage"></canvas>
